5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1832_3179.log
== SUBMITION (2019-06-13 19:35:30) 
-- CODE:
from numpy import*
a= array(eval(input("numeros : ")))
c = -1
t = ""
for v in a:
	t= t + a[i]
	i = i - 1
print(t)
-- EXECUTION TIME:
0.866443
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3179/main.py", line 6, in <module>
    t= t + a[i]
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:35:31) 
-- CODE:
from numpy import*
a= array(eval(input("numeros : ")))
c = -1
t = ""
for v in a:
	t= t + a[i]
	i = i - 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:36:00) 
-- CODE:
from numpy import*
a= array(eval(input("numeros : ")))
c = -1
t = ""
for v in a:
	t= t + a[i]
	i = i - 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:36:01) 
-- CODE:
from numpy import*
a= array(eval(input("numeros : ")))
c = -1
t = ""
for v in a:
	t= t + a[i]
	i = i - 1
print(t)
-- EXECUTION TIME:
0.77311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3179/main.py", line 6, in <module>
    t= t + a[i]
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:36:25) 
-- CODE:
from numpy import*
a= array(eval(input("numeros : ")))
c = -1
t = ""
i = 0
for v in a:
	t= t + a[i]
	i = i - 1
print(t)
-- EXECUTION TIME:
0.859215
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3179/main.py", line 7, in <module>
    t= t + a[i]
TypeError: Can't convert 'numpy.int64' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:36:25) 
-- CODE:
from numpy import*
a= array(eval(input("numeros : ")))
c = -1
t = ""
i = 0
for v in a:
	t= t + a[i]
	i = i - 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:44:58) 
-- CODE:
from numpy import*
a= array(eval(input("numeros : ")))
c = -1
t = ""
i = 0
for v in a:
	t= t + a[i]
	i = i - 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:45:01) 
-- CODE:
from numpy import*
a= array(eval(input("numeros : ")))
c = -1
t = ""
i = 0
for v in a:
	t= t + a[i]
	i = i - 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:45:03) 
-- CODE:
from numpy import*
a= array(eval(input("numeros : ")))
c = -1
t = ""
i = 0
for v in a:
	t= t + a[i]
	i = i - 1
print(t)
-- EXECUTION TIME:
0.948816
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3179/main.py", line 7, in <module>
    t= t + a[i]
TypeError: Can't convert 'numpy.int64' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
